# TEMPEST

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Commands.txt  Doxyfile  LICENSE  README.md  commands.txt  repo.html  template.txt  valgrind_log.txt  valgrinf-log.txt
GDD/: GDD_CGame.odt  TEMPEST.odt
Tiled/: CGame.tiled-session  CGame_L1.tmx  CGame_L1_BG_Layer.csv  CGame_L1_Up_Layer.csv  TileMap.tsx  TiledMapWorld.tmx  TiledMapWorld.tsx
Tiled/FightScene/: FightSceneMap.tmx  MikaScene.tiled-project  MikaScene.tiled-session  MikaTilePatrones.tsx
Tiled/FightSceneArturo/: ArturoScene.tiled-session  FightSceneArturo.tmx
Tiled/MiniTown/: MiniTownMapPatrons.tsx  MiniTownTiled.tmx
assets/: config.txt
assets/Card/: Blank.aseprite
assets/Dialog/: Mika.dialog
assets/Dice/: AllDice.ase  D10-Icon.ase  D10.ase  D12-Icon.ase  D12.ase  D20-Icon.ase  D20.ase  D4-Icon.ase  D4.ase  D6-Icon.ase  D6.ase  D8-Icon.ase  D8.ase
assets/Entities/: Portraint.aseprite
assets/Icons/: Information.xcf  Tempest.ase  Tempest_LOGO.xcf  Tempest_LOGO_Letras.xcf  VeyxTempest.ase  VeyxTempest_2.ase
assets/JSON/: Entity.json  map.json
assets/Maps/: CGame_L1_BG_Layer.csv  CGame_L1_UP_Layer.csv  CGame_L1_Up_Layer.csv  map.json
assets/Maps/FightMaps/: MikaMap_Ground.csv  MikaMap_Mid.csv  MikaMap_Top.csv
assets/Maps/MiniTownMap/: MiniTownTiled_Deco.csv  MiniTownTiled_Ground.csv  MiniTownTiled_Mid.csv  MiniTownTiled_Top.csv
assets/Tilemap/: Mika_Level.aseprite  Tilemap_Entity.aseprite  Tilemap_World.aseprite
assets/Tilemap/MiniTownTileMap/: TileMap.aseprite
assets/UI/Cursor/: Pointer.aseprite
assets/UI/Raw_UI/: Pergamino.xcf
assets/Veyx/Dralik/: DraLik-Head.ase  DraLik.ase
assets/Veyx/Godam/: Godam-Head.aseprite  Godam.ase
assets/Veyx/Ignisq/: Ignisq-Head.aseprite  Ignisq.ase
assets/Veyx/Ligly/: Ligly-Head.aseprite  Ligly.ase
assets/Veyx/Mushy/: Mushy-Head.aseprite  Mushy.ase
assets/Veyx/Sapmoss/: Sapmoss-Head.aseprite  Sapmoss.ase
assets/Veyx/Sprites/: Veyx_10.ase
assets/Veyx/Wandrail/: Wandrail-Head.aseprite  Wandrail.ase
assets/Veyx/Wangil/: Wangil-Head.aseprite  Wangil.ase
assets/Veyx/Waqkil/: Waqkil-Head.aseprite  Waqkil.ase
assets/VeyxData/: Veyx.data
doc/html/: Engine_8h_source.html  Entity_8h_source.html  Game_8h_source.html  HashTable_8h_source.html  Information_8h_source.html  LoadTextures_8h_source.html  Map_8h_source.html  MenuScene_8h_source.html  OnUpdate_8h_source.html  OperadorOverload_8h_source.html  ScenesManager_8h_source.html  Shaders_8h_source.html  Textures_8h_source.html  Transforms_8h_source.html  Updates_8h_source.html  _engine_8c.html  _engine_8c.js  _engine_8h.html  _engine_8h.js  _engine_8h_source.html  _engine_updates_8h_source.html  _entity_8c.html  _entity_8c.js  _entity_8h.html  _entity_8h.js  _entity_8h_source.html  _game_8c.html  _game_8c.js  _game_8h.html  _game_8h.js  _game_8h_source.html  _hash_table_8c.html  _hash_table_8c.js  _hash_table_8h.html  _hash_table_8h.js  _hash_table_8h_source.html  _information_8c.html  _information_8c.js  _information_8h.html  _information_8h.js  (+106 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_2.js  (+44 more)
doc/latex/: Engine_8h_source.tex  Entity_8h_source.tex  Game_8h_source.tex  HashTable_8h_source.tex  Information_8h_source.tex  LoadTextures_8h_source.tex  Map_8h_source.tex  MenuScene_8h_source.tex  OnUpdate_8h_source.tex  OperadorOverload_8h_source.tex  ScenesManager_8h_source.tex  Shaders_8h_source.tex  Textures_8h_source.tex  Transforms_8h_source.tex  Updates_8h_source.tex  _engine_8c.tex  _engine_8h.tex  _engine_8h_source.tex  _engine_updates_8h_source.tex  _entity_8c.tex  _entity_8h.tex  _entity_8h_source.tex  _game_8c.tex  _game_8h.tex  _game_8h_source.tex  _hash_table_8c.tex  _hash_table_8h.tex  _hash_table_8h_source.tex  _information_8c.tex  _information_8h.tex  _information_8h_source.tex  _load_textures_8c.tex  _load_textures_8h.tex  _load_textures_8h_source.tex  _map_8c.tex  _map_8h.tex  _map_8h_source.tex  _on_update_8c.tex  _on_update_8h.tex  _on_update_8h_source.tex  (+49 more)
src/: CMakeLists.txt
src/Components/: Animation.c  Animation.h  BattleLog.c  BattleLog.h  Button.c  Button.h  CMakeLists.txt  Camera.c  Camera.h  Card.c  Card.h  CardSelector.c  CardSelector.h  Collision.c  Collision.h  Dialog.c  Dialog.h  Dice.c  Dice.h  Entity.c  Entity.h  EntityTypes.h  Fight.c  Fight.h  Fonts.c  Fonts.h  Inventory.c  Inventory.h  LoadTextures.c  LoadTextures.h  Map.c  Map.h  Mouse.c  Mouse.h  ObjectType.h  Shaders.c  Shaders.h  Sound.c  Sound.h  Textures.h  (+5 more)
src/Engine/: CMakeLists.txt  Config.c  Config.h  Engine.c  Engine.h  Flags.c  Flags.h  Updates.c  Updates.h
src/Entity/: Entity.c  Entity.h
src/Externs/: invert.fs
src/Funcionalidades/: CMakeLists.txt
src/Game/: Game.c  Game.h  OnUpdate.c  OnUpdate.h
src/Main/: CMakeLists.txt  main.c
src/MapGen/: Map.c  Map.h  map.json
src/Motor/: Motor.c  Motor.h
src/Scenes/: AuxScenes.c  AuxScenes.h  BestiaryScene.c  BestiaryScene.h  ConfigMenuScene.c  ConfigMenuScene.h  FightScene.c  FightScene.h  LoadingScene.c  LoadingScene.h  MenuScene.c  MenuScene.h  OptionMenuScene.c  OptionMenuScene.h  Scenes.c  Scenes.h  ScenesManager.c  ScenesManager.h
src/Shaders/: glassblur.fs  grayscale.fs  invert.fs  outline.fs  polinizar.fs  polinizar.vs  shieldGLow.vs  shield_glow.fs
src/Textures/: LoadTextures.c  LoadTextures.h  Map.c  Map.h  Textures.h
src/Utils/: Algorithm.h  Algorithms.h  EngineUpdates.c  EngineUpdates.h  ErrorManager.h  Fonts.c  Fonts.h  HashTable.c  HashTable.h  Information.c  Information.h  LoadTextures.c  LoadTextures.h  OperadorOverload.c  OperadorOverload.h  Queues.c  Queues.h  Scale.c  Scale.h  String.h  Transforms.h  VecMath.h  Vector.h
(+5 files in other folders)
